Various LSP fixes and improvements
* Fix several deadlocks and ConcurrentModificationExceptions
* Implement global rename
* Model changes for future LSPServer improvements
  * Separately track definition and override references
  * Distinguish between exported and command procedures
* Include final "." in scope when formatting
* Adapt to call hierarchy changes in recent VSCode/LSP versions
* Add comment to formatted output if LSPServer reports negative line indentation
* CachingServer: Track unused code only if file is actually open in an editor
  (UI will not show it otherwise)
* CachingServer: Force flushing file cache after initial loading (to avoid
  timeouts at VSCode shutdown due to long cache flush times)
* Add diagnostics to track down when symbols are misreported by LSPServer